--- a/index.html
+++ b/index.html
@@ -1,48 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- displays site properly based on user's device -->
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <title>Frontend Mentor | Stats preview card component</title>
 
-  <title>Frontend Mentor | Stats preview card component</title>
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" type="text/css" href="./style.css" />
+  </head>
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="./style.css">
-</head>
-
-<body>
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-xs-12 col-sm-6 col-md-6">
-        <h1>Get <b>insights</b> that help your business grow.</h1>
-        <p>
-          Discover the benefits of data analytics and make better decisions regarding revenue, customer
-          experience, and overall efficiency.
-        </p>
-        <div class="bottom">
-          <div><h3>10k+</h3><p>companies</p></div>
-          <div><h3>314</h3><p>templates</p></div>
-          <div><h3>12m+</h3><p>queries</p></div>
+  <body>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-6 card--text">
+          <h1 class="heading--primary">
+            Get <b>insights</b> that help your business grow.
+          </h1>
+          <p class="description">
+            Discover the benefits of data analytics and make better decisions
+            regarding revenue, customer experience, and overall efficiency.
+          </p>
+          <div class="bottom">
+            <div class="bottom--el">
+              <h2>10k+</h2>
+              <p>companies</p>
+            </div>
+            <div class="bottom--el">
+              <h2>314</h2>
+              <p>templates</p>
+            </div>
+            <div class="bottom--el">
+              <h2>12M+</h2>
+              <p>queries</p>
+            </div>
+          </div>
         </div>
-
-      </div>
-      <div class="col-xs-12 col-sm-6 col-md-6" id="secondDiv">
-
-
+        <div class="col-xs-12 col-sm-6 col-md-6 card--img"></div>
       </div>
     </div>
-
-  </div>
-  <!-- <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
-</body>
-
+  </body>
 </html>
